gazelle/languages/js/tests/parse_errors/bad.ts
export function main() {
    looks like some bad syntax here
}